# molecular-transfer-learning

./: .gitignore  LICENCE  README.md  citation.cff  download_data.sh  get_datasets.sh  get_datasets_simple.sh  pyproject.toml
notebooks/: RF_model.ipynb  dataset_vizualizationn.ipynb  initial_vizualization.ipynb  remove_overlaps.ipynb  train_test_splits.ipynb
preprocessing/: clean.py  splits.py
pretraining/: __main__.py
pretraining/data/: __init__.py  datamodule.py  dataset.py
pretraining/modelling/: __init__.py  backbone.py  vgaemodule.py
report_data_scripts/: plots.py  tabular_data.py
results/: README.md
results/dr/non-pretrained/model_0/: hparams.yaml  metrics.csv
results/dr/non-pretrained/model_1/: hparams.yaml  metrics.csv
results/dr/non-pretrained/model_2/: hparams.yaml  metrics.csv
results/dr/non-pretrained/model_3/: hparams.yaml  metrics.csv
results/dr/non-pretrained/model_4/: hparams.yaml  metrics.csv
results/dr/pretrained/model_0/: hparams.yaml  metrics.csv
results/dr/pretrained/model_1/: hparams.yaml  metrics.csv
results/dr/pretrained/model_2/: hparams.yaml  metrics.csv
results/dr/rf/: metrics.csv
results/lipo/rf/: metrics.csv
results/qm7/rf/: metrics.csv
results/tables/: mean_metrics.csv  model_summary.csv  t_test_results.csv
vgae_model/: README.md  __main__.py
vgae_model/data/: __init__.py  datamodule.py  dataset.py  transforms.py
vgae_model/modelling/: __init__.py  backbone.py  gcn.py  regressor.py  set_transformer.py  vgaemodule.py
vgae_model/utils/: __init__.py  hyperparams.py  trainer.py
(+50 files in other folders)
