[project]
name = "molecular-transfer-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.1",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "lightning>=2.6.1",
    "mlflow>=3.10.0",
    "mypy>=1.19.1",
    "pandas==2.3.1",
    "rdkit>=2025.9.5",
    "ruff>=0.15.6",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
    "torch-geometric>=2.7.0",
]
